--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ PORT=5000
 
 GOOGLE_CLIENT_ID=639230294549-moreg53ngaog41q4ha830hsmbi902p4f.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://goldenpluscaferms.onrender.com/api/auth/drive/callback
+GOOGLE_REDIRECT_URI=https://gasmachineserestaurantrms.onrender.com/api/auth/drive/callback
 GOOGLE_REFRESH_TOKEN=your-refresh-token
 GOOGLE_DRIVE_FOLDER_ID=1kE-WLwvYUgqO5rcl6ZkQqQq55ZnupnFk
 
