--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
-# MONGO_URI=mongodb://localhost:27017/restaurant
-MONGO_URI=mongodb+srv://chrishan2002aloka_db_user:EVW5VSW2eomsvtWJ@gasmachineserestaurantr.xhaqsyq.mongodb.net/
-# MONGO_URI=mongodb+srv://chrishan2002aloka:aloka1234@cluster0.1satjtv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/GasmaDummyDB
+# MONGO_URI=mongodb+srv://chrishan2002aloka_db_user:EVW5VSW2eomsvtWJ@gasmachineserestaurantr.xhaqsyq.mongodb.net/
 JWT_SECRET=your-secret-key
 PORT=5000
 
@@ -13,3 +12,6 @@ GOOGLE_DRIVE_FOLDER_ID=1kE-WLwvYUgqO5rcl6ZkQqQq55ZnupnFk
 # mongodb+srv://chrishan2002aloka_db_user:uHfPrFyv9XLi04a7@rmsforgoldencafe.2du4jen.mongodb.net/?retryWrites=true&w=majority&appName=RMSFORGOLDENCAFE
 # chrishan2002aloka_db_user
 # uHfPrFyv9XLi04a7
+
+# http://localhost:5000
+# https://gasmachineserestaurantrms.onrender.com
