--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# MONGO_URI=mongodb://localhost:27017/GasmaDummyDB
-MONGO_URI=mongodb+srv://chrishan2002aloka_db_user:EVW5VSW2eomsvtWJ@gasmachineserestaurantr.xhaqsyq.mongodb.net/
+MONGO_URI=mongodb+srv://raxwotechnology_db_user:uksYgCFCn20n30mW@gasmachineserestaurant.fdr886s.mongodb.net/
+# MONGO_URI=mongodb+srv://chrishan2002aloka_db_user:EVW5VSW2eomsvtWJ@gasmachineserestaurantr.xhaqsyq.mongodb.net/
 JWT_SECRET=your-secret-key
 PORT=5000
 
