--- a/backend/.env
+++ b/backend/.env
@@ -7,6 +7,6 @@ PORT=5000
 # chrishan2002aloka_db_user
 # uHfPrFyv9XLi04a7
 
-# http://localhost:5000
+# http://localhost:5000 - FOR DEV
 # https://rms-6one.onrender.com - FOR TEST
 # https://gasmachineserestaurantrms.onrender.com
