--- a/backend/.env
+++ b/backend/.env
@@ -9,5 +9,5 @@ PORT=5000
 
 # http://localhost:5000 - FOR DEV
 # https://rms-6one.onrender.com - FOR TEST
-# https://gasmachineserestaurantrms.onrender.com
-# https://gasmachineserestaurantapp.onrender.com
+# https://gasmachineserestaurantrms.onrender.com - old
+# https://gasmachineserestaurantapp.onrender.com - new
